tests/ui/imports/import4.stderr
error[E0432]: unresolved import `b`
  --> $DIR/import4.rs:4:17
   |
LL | mod a { pub use b::foo; }
   |                 ^ help: a similar path exists: `crate::b`
   |
   = note: `use` statements changed in Rust 2018; read more at <https://doc.rust-lang.org/edition-guide/rust-2018/module-system/path-clarity.html>

error[E0432]: unresolved import `a`
  --> $DIR/import4.rs:5:17
   |
LL | mod b { pub use a::foo; }
   |                 ^ help: a similar path exists: `crate::a`
   |
   = note: `use` statements changed in Rust 2018; read more at <https://doc.rust-lang.org/edition-guide/rust-2018/module-system/path-clarity.html>

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0432`.
